# TaleSpinner_exp

./: .env.example  .gitignore  MIGRATION_PLAN.md  README.md  env.example  guilde.md  package.json  pyproject.toml
.cursor/rules/: chakra-ui.mdc  frontend.mdc  yarn.mdc
alembic/: env.py
app/core/: database.py
backend/: README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20251205_add_llm_config_tables.py  20251205_rename_user_id_to_uuid.py  57fc2bcd5e1c_initial_migration.py  89da9abca5b4_add_base_url_and_http_headers_to_.py  e8f64916f77c_add_base_url_and_http_headers_to_model_.py  refactor_presets_json.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  embedding_configs.py  model_configs.py  presets.py  providers.py  runs.py  stories.py  tokens.py  users.py  world_architect.py
backend/app/core/: config.py  crypto.py  database.py
backend/app/models/: __init__.py  config_preset.py  embedding_config.py  model_config.py  provider.py  story.py  token.py  user.py
backend/app/schemas/: __init__.py  config_preset.py  embedding_config.py  model_config.py  provider.py  run.py  story.py  token.py  user.py  world_architect.py
backend/app/services/: embedding_configs.py  model_configs.py  presets.py  providers.py  runs.py  stories.py  tokens.py  users.py  world_architect.py
docs/: frontend-api-implementation-guide.md  llm-api-guide.md  llm-config-api.md
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/app/providers/: Provider.tsx
frontend/src/components/ui/: close-button.tsx  (+4 more)
(+55 files in other folders)
