[project]
name = "talespinner-exp"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitry Plyaskin"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "litellm (>=1.80.7,<2.0.0)",
    "chromadb (>=1.3.5,<2.0.0)",
    "langgraph (>=1.0.4,<2.0.0)",
    "sqlmodel (>=0.0.27,<0.0.28)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
